--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -23,73 +23,193 @@
     integrity="sha512-/DXTXr6nQodMUiq+IUJYCt2PPOUjrHJ9wFrqpJ3XkgPNOZVfMok7cRw6CSxyCQxXn6ozlESsSh1/sMCTF1rL/g=="
     crossorigin="anonymous"></script>
 
-  <!-- bulma -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/HakuraSukinoe/bulma-hsl/bulma.min-v6.css" />
+  <!-- framework -->
+  <link rel="stylesheet" href="https://unpkg.com/@tabler/core@latest/dist/css/tabler.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/e5971878b8.js" crossorigin="anonymous"></script>
 
-  <!-- custom style -->
-  <link rel="stylesheet" href="/static/css/style.css">
-  <link rel="stylesheet" href="/static/css/pages/admin/style.css">
 
   {% block header %}
   {% endblock %}
 </head>
 
 <body>
-  <!-- Header -->
-  {% include './components/navbar.html' %}
+  <style>
+    /* width */
+    *::-webkit-scrollbar {
+      width: 10px;
+    }
 
-  <!-- content -->
-  <div class="content admin-con">
-    <div class="columns is-marginless is-paddingless">
-      <div class="colmun">
-        <div class="sidebar">
-          <div id="style-3" class="sidebar-wrapper">
-            <div class="logo"><a class="simple-text logo-normal">{{ appName() }} Admin Panel</a></div>
-            <ul class="nav">
-              <li class="nav-item"><a class="nav-link"><span class="icon"><i class="fa fa-home"></i></span> <span
-                    class="name">Dashboard</span></a></li>
+    /* Track */
+    *::-webkit-scrollbar-track {
+      background: #f1f1f1; 
+    }
+    
+    /* Handle */
+    *::-webkit-scrollbar-thumb {
+      background: rgb(168, 168, 168); 
+    }
+
+    /* Handle on hover */
+    *::-webkit-scrollbar-thumb:hover {
+      background: #555; 
+    }
+  </style>
+
+  <div class="wrapper">
+    <aside class="navbar navbar-vertical navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <h1 class="navbar-brand navbar-brand-autodark">
+          <a href=".">
+            {{ appName() }} Admin Panel
+          </a>
+        </h1>
+        <div class="collapse navbar-collapse" id="navbar-menu">
+          <ul class="navbar-nav pt-lg-3">
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/" id="navbar_home">
+                <span class="nav-link-title">
+                  <i class="fas fa-home"></i> Home
+                </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/admin/users" id="navbar_users">
+                <span class="nav-link-title">
+                  <i class="fas fa-users"></i> Users
+                </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html" id="navbar_scores">
+                <span class="nav-link-title">
+                  <i class="fas fa-trophy"></i> Scores
+                </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html" id="navbar_beatmaps">
+                <span class="nav-link-title">
+                  <i class="fas fa-music"></i> Beatmaps
+                </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html" id="navbar_bmap_request">
+                <span class="nav-link-title">
+                  <i class="fas fa-bullhorn"></i> Requested Beatmaps
+                </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html" id="navbar_reports">
+                <span class="nav-link-title">
+                  <i class="fas fa-bullhorn"></i> Reports
+                </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html" id="navbar_china">
+                <span class="nav-link-title">
+                  <i class="fas fa-comments"></i> Social Spy
+                </span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html" id="navbar_logs">
+                <span class="nav-link-title">
+                  <i class="fas fa-list"></i> Logs
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </aside>
+    <header class="navbar navbar-expand-md navbar-light d-none d-lg-flex d-print-none">
+      <div class="container-xl">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-nav flex-row order-md-last">
+          <div class="nav-item d-none d-md-flex me-3">
+            <a href="https://seventwentyseven.tk" class="nav-link px-0" tabindex="-1">
+              <span><i class="fas fa-home"></i> Main Website</span>
+            </a>
+          </div>
+          <div class="nav-item dropdown">
+            <a href="#" class="nav-link d-flex lh-1 text-reset p-0" data-bs-toggle="dropdown" aria-label="Open user menu">
+              <span class="avatar avatar-sm" style="background-image: url(https://a.seventwentyseven.tk/{{ session['user_data']['id'] }})"></span>
+              <div class="d-none d-xl-block ps-2">
+                <div>{{ session['user_data']['name'] }}</div>
+              </div>
+            </a>
+            <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+              <a href="/u/{{ session['user_data']['id'] }}" class="dropdown-item">Profile</a>
+              <div class="dropdown-divider"></div>
+              <a href="/settings#" class="dropdown-item">Settings</a>
+              <a href="/logout" class="dropdown-item">Logout</a>
+            </div>
+          </div>
+        </div>
+        
+        <div class="collapse navbar-collapse" id="navbar-menu">
+          <div>
+            <form action="." method="get">
+              <div class="input-icon">
+                <span class="input-icon-addon">
+                  <!-- Download SVG icon from http://tabler-icons.io/i/search -->
+                  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><circle cx="10" cy="10" r="7"></circle><line x1="21" y1="21" x2="15" y2="15"></line></svg>
+                </span>
+                <input type="text" class="form-control" placeholder="Search…" aria-label="Search in website">
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <!-- Block Content -->
+    <div class="page-wrapper">
+      {% block content %}
+      {% endblock %}
+    
+    <!-- Footer -->
+    <footer class="footer footer-transparent d-print-none">
+      <div class="container">
+        <div class="row text-center align-items-center flex-row-reverse">
+          <div class="col-lg-auto ms-lg-auto">
+            <ul class="list-inline list-inline-dots mb-0">
+              <li class="list-inline-item"><a href="/discord" class="link-secondary"><i class="fab fa-discord"></i> Discord</a></li>
+              <li class="list-inline-item"><a href="/github" class="link-secondary"><i class="fab fa-github"></i> GitHub</a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-lg-auto mt-3 mt-lg-0">
+            <ul class="list-inline list-inline-dots mb-0">
+              <li class="list-inline-item">
+                Copyright © 2021
+                <a href="." class="link-secondary">seventwentyseven.tk</a>.
+                All rights reserved.
+              </li>
+              <li class="list-inline-item">
+                <a href="./changelog.html" class="link-secondary" rel="noopener">v{{ appVersion() }}</a>
+              </li>
             </ul>
           </div>
         </div>
       </div>
-      <div class="column content">
-        <div class="main-content">
-          <div class="columns is-marginless">
-            <div class="column is-paddingless is-avatar">
-              <img src="https://a.{{ domain() }}/{{ session.user_data['id'] }}"
-                onError="this.src='/static/images/avatar_notwork.png';" class="header-avatar">
-            </div>
-            <div class="column is-paddingless flex-vcenter">
-              <h2 class="section-title">Dashboard</h2>
-              <p class="section-lead">Welcome to {{ appName() }} admin panel!</p>
-            </div>
-          </div>
-          <section class="section">
-            {% block content %}
-            {% endblock %}
-          </section>
-        </div>
-      </div>
+    </footer>
     </div>
   </div>
 
-  <!-- footer -->
-  <footer class="footer">
-    <div class="content">
-      <span>{{ appName() }} <strong>v{{ appVersion() }}</strong></span>
-      <a class="foot-link" href="/github"><i class="fa fa-github"></i> GitHub</a>
-      <a class="foot-link" href="/discord"><i class="fab fa-discord"></i> Discord</a>
-      <a class="foot-link" href="/youtube"><i class="fab fa-youtube"></i> YouTube</a>
-      <a class="foot-link" href="/twitter"><i class="fab fa-twitter"></i> Twitter</a>
-      <a class="foot-link" href="/instagram"><i class="fab fa-instagram"></i> Instagram</a>
-    </div>
-  </footer>
-
-  <!-- main js script -->
-  <script src="/static/js/main.js" crossorigin="anonymous"></script>
+  <!-- Tabler Core -->
+  <script src="https://preview.tabler.io/dist/js/tabler.js"></script>
 </body>
 
 </html>
